@@ -88,6 +88,8 @@ Bug Fixes
 * SOLR-17206: Eliminate the possibility of a -1 status code for SolrCloud update requests that are distributed.
   (Paul McArthur)
 
+* SOLR-17213: Fix spurious warnings about solr url format in Solr CLI when users aren't providing a deprecated solr url.  (Eric Pugh)
+
 Dependency Upgrades
 ---------------------
 
